fedora.byondlabs.io/ingresses.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fedora-repository
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - fedora.byondlabs.io
      secretName: fedora-tls
  rules:
    - host: fedora.byondlabs.io
      http:
        paths:
          - backend:
              serviceName: fedora-repository
              servicePort: 80
